<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="sevak.hovhannisyan.myproject.ui.fragments.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/transactionsFragment"
        android:name="sevak.hovhannisyan.myproject.ui.fragments.TransactionsFragment"
        android:label="@string/nav_transactions"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/aiAssistantFragment"
        android:name="sevak.hovhannisyan.myproject.ui.fragments.AiAssistantFragment"
        android:label="@string/nav_ai_assistant"
        tools:layout="@layout/fragment_ai_assistant" />

</navigation>
